--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -53,5 +53,5 @@ jobs:
         #        interface. Also ensure that fails CI if tests fail (see runtests.py)
         # Avoid being in a directory which has a scipy/ dir
         pushd installdir
-        python -c "from scipy import constants as s; s.test()"
+        python -c "import scipy; scipy.test(parallel=2)"
         popd
