MAINT: update for changes in SciPy master branch

--- a/scipy/ndimage/meson.build
+++ b/scipy/ndimage/meson.build
@@ -41,6 +41,11 @@ python_sources = [
   '__init__.py',
   '_ni_docstrings.py',
   '_ni_support.py',
+  '_filters.py',
+  '_fourier.py',
+  '_interpolation.py',
+  '_measurements.py',
+  '_morphology.py',
   'filters.py',
   'fourier.py',
   'interpolation.py',
