Remove -t flag from copy command
-t option not present on macOS.

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -95,7 +95,7 @@ _cython_tree = custom_target('_cython_tree',
     'linalg.pxd',
     'special.pxd',
   ],
-  command : ['cp', '@INPUT@', '-t', '@OUTDIR@'],
+  command : ['cp', '@INPUT@', '@OUTDIR@'],
 )
 cython_tree = declare_dependency(sources: _cython_tree)
 
