Fix for ckdtree PyInit symbol visibility
Cython does not make PyInit symbol visible in built module, when we
apply `-fvisibility=hidden`.  See

https://github.com/cython/cython/issues/3380

Replicate behavior of Numpy distutils, and do not use cpp flags for
ckdtree module.

--- a/scipy/spatial/meson.build
+++ b/scipy/spatial/meson.build
@@ -54,7 +54,9 @@ endif
 
 ckdtree = py3.extension_module('ckdtree',
   ckdtree_src + [ckdtree_cpp],
-  cpp_args: cpp_args + ['-Wno-cpp'], # TODO: replace with numpy_nodepr_api
+  # Cannot use -fnovisibility=hidden for Cython cpp, because it
+  # conceals PyInit_ckdtree symbol, and prevents module load.
+  cpp_args: ['-Wno-cpp'], # TODO: replace with numpy_nodepr_api
   include_directories: [incdir_numpy, '../_lib', '../_build_utils/src', 'ckdtree/src'],
   dependencies: [py3_dep],
   install : true,
