--- a/scipy/io/meson.build
+++ b/scipy/io/meson.build
@@ -19,6 +19,7 @@ _test_fortran = py3.extension_module('_test_fortran',
   include_directories: [incdir_numpy, incdir_f2py],
   dependencies: [py3_dep, lapack],
   install: true,
+  link_language : 'fortran',
   subdir: 'scipy/io')
 
 py3.install_sources(['__init__.py',
