BLD: update Meson build for special.hyp2f1 change in upstream/master

--- a/scipy/special/meson.build
+++ b/scipy/special/meson.build
@@ -17,6 +17,7 @@ _ufuncs_pxi_pxd_sources = custom_target('_ufuncs_pxi_pxd',
     '_exprel.pxd',
     '_factorial.pxd',
     '_hyp0f1.pxd',
+    '_hyp2f1.pxd',
     '_hypergeometric.pxd',
     '_lambertw.pxd',
     '_legacy.pxd',
@@ -52,6 +53,7 @@ _ufuncs_pxi_pxd_sources = custom_target('_ufuncs_pxi_pxd',
     '_exprel.pxd',
     '_factorial.pxd',
     '_hyp0f1.pxd',
+    '_hyp2f1.pxd',
     '_hypergeometric.pxd',
     '_lambertw.pxd',
     '_legacy.pxd',
