--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,84 +1,110 @@
-name: macOS tests
+name: macOS Tests
 
 on:
   push:
     branches:
-      - master
-      - maintenance/**
+      - meson
+
   pull_request:
     branches:
-      - master
-      - maintenance/**
+      - meson
 
+env:
+  INSTALLDIR: "installdir"
+  CCACHE_DIR: "${{ github.workspace }}/.ccache"
 
 jobs:
-  test_macos:
-    name: macOS Test Matrix
-    if: "github.repository == 'scipy/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]')"
+  test_meson:
+    name: Meson build
+    # If using act to run CI locally the github object does not exist and the usual skipping should not be enforced
+    if: "github.repository != '' || github.repository == 'rgommers/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]') && !contains(github.ref, 'maintenance/') && !contains(github.base_ref, 'maintenance/')"
     runs-on: macos-latest
     strategy:
-      max-parallel: 3
       matrix:
-        python-version: [3.8, 3.9]
-        numpy-version: ['--upgrade numpy']
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: Set up Python ${{ matrix.python-version }}
+
+    - name: Setup Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Setup gfortran
+    - name: Install Ccache
       run: |
-        # this is taken verbatim from the numpy azure pipeline setup.
-        set -xe
-        # same version of gfortran as the open-libs and numpy-wheel builds
-        curl -L https://github.com/MacPython/gfortran-install/raw/master/archives/gfortran-4.9.0-Mavericks.dmg -o gfortran.dmg
-        GFORTRAN_SHA256=$(shasum -a 256 gfortran.dmg)
-        KNOWN_SHA256="d2d5ca5ba8332d63bbe23a07201c4a0a5d7e09ee56f0298a96775f928c3c4b30  gfortran.dmg"
-        if [ "$GFORTRAN_SHA256" != "$KNOWN_SHA256" ]; then
-            echo sha256 mismatch
-            exit 1
-        fi
-        hdiutil attach -mountpoint /Volumes/gfortran gfortran.dmg
-        sudo installer -pkg /Volumes/gfortran/gfortran.pkg -target /
-        otool -L /usr/local/gfortran/lib/libgfortran.3.dylib
-        # Manually symlink gfortran-4.9 to plain gfortran for f2py.
-        # No longer needed after Feb 13 2020 as gfortran is already present
-        # and the attempted link errors. Keep this for future reference.
-        # ln -s /usr/local/bin/gfortran-4.9 /usr/local/bin/gfortran
+        brew install ccache
 
-    - name: Setup openblas
+    - name:  Prepare compiler cache
+      id:    prep-ccache
+      shell: bash -l {0}
       run: |
-        # this is taken verbatim from the numpy azure pipeline setup.
-        set -xe
-        target=$(python tools/openblas_support.py)
-        ls -lR $target
-        # manually link to appropriate system paths
-        cp $target/lib/lib* /usr/local/lib/
-        cp $target/include/* /usr/local/include/
+        mkdir -p "${CCACHE_DIR}"
+        echo "::set-output name=dir::$CCACHE_DIR"
+        NOW=$(date -u +"%F-%T")
+        echo "::set-output name=timestamp::${NOW}"
 
-        # otool -L /usr/local/lib/libopenblas*
+    - name: Setup compiler cache
+      uses:  actions/cache@v2
+      id:    cache-ccache
+      # Reference: https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows#matching-a-cache-key
+      # NOTE: The caching strategy is modeled in a way that it will always have a unique cache key for each workflow run
+      # (even if the same workflow is run multiple times). The restore keys are not unique and for a partial match, they will
+      # return the most recently created cache entry, according to the GitHub Action Docs.
+      with:
+        path: ${{ steps.prep-ccache.outputs.dir }}
+        key:  ${{ github.workflow }}-${{ matrix.python-version }}-ccache-macos-${{ steps.prep-ccache.outputs.timestamp }}
+        # This evaluates to `macOS Tests-3.9-ccache-macos-` which is not unique. As the CI matrix is expanded, this will
+        # need to be updated to be unique so that the cache is not restored from a different job altogether.
+        restore-keys: |
+          ${{ github.workflow }}-${{ matrix.python-version }}-ccache-macos-
 
-        echo "[openblas]" > site.cfg
-        echo "libraries = openblas" >> site.cfg
-        echo "library_dirs = /usr/local/lib" >> site.cfg
-        echo "include_dirs = /usr/local/include" >> site.cfg
-        echo "runtime_library_dirs = /usr/local/lib" >> site.cfg
+    - name: Cache conda
+      uses: actions/cache@v2
+      env:
+        # Increase this value to reset cache if environment.yml has not changed
+        CACHE_NUMBER: 0
+      with:
+        path: ~/conda_pkgs_dir
+        key:
+          ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('environment.yml') }}
 
-    - name: A few other packages
-      continue-on-error: true
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        mamba-version: "*"
+        channels: conda-forge
+        channel-priority: true
+        environment-file: environment.yml
+        use-only-tar-bz2: true
+
+    - name: Setup Conda Environment
+      shell: bash -l {0}
       run: |
-        brew install libmpc suitesparse swig
+        mamba env create -f environment.yml
+        ccache -s
 
-    - name: Install packages
+    - name: Build and Install Scipy
+      shell: bash -l {0}
       run: |
-        pip install ${{ matrix.numpy-version }}
-        pip install setuptools wheel cython pytest pytest-xdist pybind11 pytest-xdist mpmath gmpy2 pythran
+        conda activate scipy-dev
+        python -m pip install git+https://github.com/rgommers/meson.git@scipy
+        CC="ccache $CC" meson setup build --prefix=$PWD/${{ env.INSTALLDIR }}
+        ninja -C build -j 2
+        meson install -C build
 
-    - name: Test SciPy
+    - name: Test Scipy
+      shell: bash -l {0}
       run: |
-        SCIPY_USE_PYTHRAN=`test ${{ matrix.python-version }} != 3.9; echo $?` python -u runtests.py
+        conda activate scipy-dev
+        export PYTHONPATH="$PWD/installdir/lib/python3.9/site-packages/"
+        pushd installdir
+        python -c "import scipy; import sys; sys.exit(int(not scipy.test(parallel=2)))"
+        popd
+
+    - name: Ccache statistics
+      shell: bash -l {0}
+      run: |
+        ccache -s
