--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Install Python packages
       run: |
         python -m pip install numpy setuptools wheel cython pytest pytest-xdist pybind11 pytest-xdist mpmath gmpy2 pythran ninja
-        python -m pip install git+https://github.com/rgommers/meson.git@fix-cython-mixed-sources
+        python -m pip install git+https://github.com/mesonbuild/meson.git@master
 
     - name:  Prepare compiler cache
       id:    prep-ccache
