--- a/scipy/constants/meson.build
+++ b/scipy/constants/meson.build
@@ -1,14 +1,14 @@
 python_sources = [
   '__init__.py',
   'codata.py',
-  'constants.py',
+  'constants.py'
 ]
 
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/constants'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/constants'
 )
 
 subdir('tests')
