--- a/scipy/constants/tests/meson.build
+++ b/scipy/constants/tests/meson.build
@@ -1,11 +1,11 @@
 python_sources = [
   '__init__.py',
   'test_codata.py',
-  'test_constants.py',
+  'test_constants.py'
 ]
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/constants/tests'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/constants/tests'
 )
