--- a/scipy/fft/meson.build
+++ b/scipy/fft/meson.build
@@ -5,14 +5,14 @@ python_sources = [
   '_debug_backends.py',
   '_fftlog.py',
   '_helper.py',
-  '_realtransforms.py',
+  '_realtransforms.py'
 ]
 
 
 py3.install_sources(
-    python_sources,
-    pure: false,         # Will be installed next to binaries
-    subdir: 'scipy/fft'  # Folder relative to site-packages to install to
+  python_sources,
+  pure: false,         # Will be installed next to binaries
+  subdir: 'scipy/fft'  # Folder relative to site-packages to install to
 )
 
 subdir('_pocketfft')
