--- a/scipy/fftpack/meson.build
+++ b/scipy/fftpack/meson.build
@@ -1,9 +1,10 @@
 py3.extension_module('convolve',
   'convolve.pyx',
-  include_directories : inc_np,
-  dependencies : py3_dep,
-  install : true,
-  subdir : 'scipy/fftpack')
+  include_directories: inc_np,
+  dependencies: py3_dep,
+  install: true,
+  subdir: 'scipy/fftpack'
+)
 
 
 python_sources = [
@@ -11,14 +12,14 @@ python_sources = [
   'basic.py',
   'helper.py',
   'pseudo_diffs.py',
-  'realtransforms.py',
+  'realtransforms.py'
 ]
 
 
 py3.install_sources(
-    python_sources,
-    pure: false,             # Will be installed next to binaries
-    subdir: 'scipy/fftpack'  # Folder relative to site-packages to install to
+  python_sources,
+  pure: false,             # Will be installed next to binaries
+  subdir: 'scipy/fftpack'  # Folder relative to site-packages to install to
 )
 
 subdir('tests')
