--- a/scipy/fftpack/tests/meson.build
+++ b/scipy/fftpack/tests/meson.build
@@ -4,14 +4,14 @@ python_sources = [
   'test_helper.py',
   'test_import.py',
   'test_pseudo_diffs.py',
-  'test_real_transforms.py',
+  'test_real_transforms.py'
 ]
 
 test_sources = [
   'fftw_double_ref.npz',
   'fftw_longdouble_ref.npz',
   'fftw_single_ref.npz',
-  'test.npz',
+  'test.npz'
 ]
 
 py3.install_sources(
