STY: Style fixes of meson build files in `integrate`

--- a/scipy/integrate/_ivp/tests/meson.build
+++ b/scipy/integrate/_ivp/tests/meson.build
@@ -1,5 +1,7 @@
-py3.install_sources(['test_rk.py',
-    'test_ivp.py'],
-    pure : false,
-    subdir : 'scipy/integrate/_ivp/tests'
+py3.install_sources([
+    'test_ivp.py',
+    'test_rk.py'
+  ],
+  pure: false,
+  subdir: 'scipy/integrate/_ivp/tests'
 )
