--- a/scipy/integrate/_ivp/meson.build
+++ b/scipy/integrate/_ivp/meson.build
@@ -1,14 +1,16 @@
-py3.install_sources(['__init__.py', 
-    'dop853_coefficients.py',
-    'bdf.py',
-    'radau.py',
-    'rk.py',
-    'common.py',
-    'ivp.py',
+py3.install_sources([
+    '__init__.py',
     'base.py',
-    'lsoda.py'],
-    pure : false,
-    subdir : 'scipy/integrate/_ivp'
+    'bdf.py',
+    'common.py',
+    'dop853_coefficients.py',
+    'ivp.py',
+    'lsoda.py',
+    'radau.py',
+    'rk.py'
+  ],
+  pure: false,
+  subdir: 'scipy/integrate/_ivp'
 )
 
 subdir('tests')
