--- a/scipy/io/arff/meson.build
+++ b/scipy/io/arff/meson.build
@@ -1,7 +1,9 @@
-py3.install_sources(['__init__.py',
-  'arffread.py'],
-  pure : false,
-  subdir : 'scipy/io/arff'
+py3.install_sources([
+    '__init__.py',
+    'arffread.py'
+  ],
+  pure: false,
+  subdir: 'scipy/io/arff'
 )
 
 subdir('tests')
