--- a/scipy/io/harwell_boeing/tests/meson.build
+++ b/scipy/io/harwell_boeing/tests/meson.build
@@ -1,6 +1,8 @@
-py3.install_sources(['__init__.py',
-  'test_hb.py',
-  'test_fortran_format.py'],
-  pure : false,
-  subdir : 'scipy/io/harwell_boeing/tests'
+py3.install_sources([
+    '__init__.py',
+    'test_fortran_format.py',
+    'test_hb.py'
+  ],
+  pure: false,
+  subdir: 'scipy/io/harwell_boeing/tests'
 )
