--- a/scipy/io/matlab/meson.build
+++ b/scipy/io/matlab/meson.build
@@ -2,7 +2,8 @@ streams = py3.extension_module('streams',
   ['streams.pyx'],
   dependencies: [py3_dep],
   install: true,
-  subdir: 'scipy/io/matlab')
+  subdir: 'scipy/io/matlab'
+)
 
 mio_utils = py3.extension_module('mio_utils',
   ['mio_utils.pyx'],
@@ -10,7 +11,8 @@ mio_utils = py3.extension_module('mio_utils',
   include_directories: [incdir_numpy],
   dependencies: [py3_dep],
   install: true,
-  subdir: 'scipy/io/matlab')
+  subdir: 'scipy/io/matlab'
+)
 
 mio5_utils = py3.extension_module('mio5_utils',
   ['mio5_utils.pyx'],
@@ -18,17 +20,20 @@ mio5_utils = py3.extension_module('mio5_utils',
   include_directories: [incdir_numpy],
   dependencies: [py3_dep],
   install: true,
-  subdir: 'scipy/io/matlab')
+  subdir: 'scipy/io/matlab'
+)
 
-py3.install_sources(['miobase.py',
-  '__init__.py',
-  'mio.py',
-  'mio5.py',
-  'mio4.py',
-  'byteordercodes.py',
-  'mio5_params.py'],
-  pure : false,
-  subdir : 'scipy/io/matlab'
+py3.install_sources([
+    '__init__.py',
+    'byteordercodes.py',
+    'mio.py',
+    'mio4.py',
+    'mio5.py',
+    'mio5_params.py',
+    'miobase.py'
+  ],
+  pure: false,
+  subdir: 'scipy/io/matlab'
 )
 
 subdir('tests')
