--- a/scipy/linalg/tests/meson.build
+++ b/scipy/linalg/tests/meson.build
@@ -20,14 +20,14 @@ python_sources = [
   'test_sketches.py',
   'test_solve_toeplitz.py',
   'test_solvers.py',
-  'test_special_matrices.py',
+  'test_special_matrices.py'
 ]
 
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/linalg/tests'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/linalg/tests'
 )
 
 subdir('data')
