STY: Style fixes of meson build files in `misc`

--- a/scipy/misc/meson.build
+++ b/scipy/misc/meson.build
@@ -1,16 +1,20 @@
 python_sources = [
   '__init__.py',
   'common.py',
-  'doccer.py',
+  'doccer.py'
 ]
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/misc'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/misc'
 )
 
-py3.install_sources(['ascent.dat', 'ecg.dat', 'face.dat'],
+py3.install_sources([
+    'ascent.dat',
+    'ecg.dat',
+    'face.dat'
+  ],
   pure: false,
   subdir: 'scipy/misc'
 )
