STY: Style fixes of meson build files in `odr`

--- a/scipy/odr/meson.build
+++ b/scipy/odr/meson.build
@@ -1,10 +1,11 @@
 odrpack = static_library('odrpack',
-  ['odrpack/d_lpk.f',
-   'odrpack/d_mprec.f',
-   'odrpack/d_odr.f',
-   'odrpack/dlunoc.f',
+  [
+    'odrpack/d_lpk.f',
+    'odrpack/d_mprec.f',
+    'odrpack/d_odr.f',
+    'odrpack/dlunoc.f'
   ],
-  fortran_args : '-Wno-conversion',  # silence "conversion from REAL(8) to INTEGER(4)"
+  fortran_args: '-Wno-conversion',  # silence "conversion from REAL(8) to INTEGER(4)"
 )
 
 # TODO: add support for multiple BLAS libraries!
@@ -19,26 +20,27 @@ blas = dependency('openblas')
 
 py3.extension_module('__odrpack',
   '__odrpack.c',
-  link_with : odrpack,
-  include_directories : inc_np,
-  c_args : numpy_nodepr_api,
-  dependencies : [py3_dep, blas],
-  install : true,
-  link_language : 'fortran',
-  subdir : 'scipy/odr')
+  link_with: odrpack,
+  include_directories: inc_np,
+  c_args: numpy_nodepr_api,
+  dependencies: [py3_dep, blas],
+  install: true,
+  link_language: 'fortran',
+  subdir: 'scipy/odr'
+)
 
 
 python_sources = [
   '__init__.py',
   '_add_newdocs.py',
   'models.py',
-  'odrpack.py',
+  'odrpack.py'
 ]
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/odr'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/odr'
 )
 
 subdir('tests')
