STY: Style fixes of meson build files in `sparse`

--- a/scipy/sparse/linalg/meson.build
+++ b/scipy/sparse/linalg/meson.build
@@ -1,10 +1,12 @@
-py3.install_sources(['_expm_multiply.py',
-  '__init__.py',
-  'interface.py',
-  '_norm.py',
-  '_onenormest.py',
-  'matfuncs.py',
-  '_svdp.py'],
+py3.install_sources([
+    '__init__.py',
+    '_expm_multiply.py',
+    '_norm.py',
+    '_onenormest.py',
+    '_svdp.py',
+    'interface.py',
+    'matfuncs.py'
+  ],
   pure: false,
   subdir: 'scipy/sparse/linalg'
 )
