--- a/scipy/sparse/csgraph/meson.build
+++ b/scipy/sparse/csgraph/meson.build
@@ -5,29 +5,30 @@ pyx_files = [
   ['_reordering', '_reordering.pyx'],
   ['_shortest_path', '_shortest_path.pyx'],
   ['_tools', '_tools.pyx'],
-  ['_traversal', '_traversal.pyx'],
+  ['_traversal', '_traversal.pyx']
 ]
 
-foreach pyx_file : pyx_files
+foreach pyx_file: pyx_files
   py3.extension_module(pyx_file[0],
     pyx_file[1],
-    include_directories : inc_np,
-    dependencies : py3_dep,
-    install : true,
-    subdir : 'scipy/sparse/csgraph')
+    include_directories: inc_np,
+    dependencies: py3_dep,
+    install: true,
+    subdir: 'scipy/sparse/csgraph'
+  )
 endforeach
 
 python_sources = [
   '__init__.py',
   '_laplacian.py',
   '_validation.py',
-  'setup.py',
+  'setup.py'
 ]
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/sparse/csgraph'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/sparse/csgraph'
 )
 
 subdir('tests')
