--- a/scipy/sparse/linalg/eigen/lobpcg/meson.build
+++ b/scipy/sparse/linalg/eigen/lobpcg/meson.build
@@ -1,5 +1,7 @@
-py3.install_sources(['__init__.py',
-  'lobpcg.py'],
+py3.install_sources([
+    '__init__.py',
+    'lobpcg.py'
+  ],
   pure: false,
   subdir: 'scipy/sparse/linalg/eigen/lobpcg'
 )
