--- a/scipy/sparse/linalg/eigen/meson.build
+++ b/scipy/sparse/linalg/eigen/meson.build
@@ -1,6 +1,8 @@
-py3.install_sources(['__init__.py',
-  '_svds.py',
-  '_svds_doc.py'],
+py3.install_sources([
+    '__init__.py',
+    '_svds.py',
+    '_svds_doc.py'
+  ],
   pure: false,
   subdir: 'scipy/sparse/linalg/eigen'
 )
