--- a/scipy/sparse/linalg/isolve/tests/meson.build
+++ b/scipy/sparse/linalg/isolve/tests/meson.build
@@ -1,12 +1,14 @@
-py3.install_sources(['test_gcrotmk.py',
-  'test_utils.py',
-  '__init__.py',
-  'test_lsmr.py',
-  'demo_lgmres.py',
-  'test_lsqr.py',
-  'test_lgmres.py',
-  'test_iterative.py',
-  'test_minres.py'],
-  pure : false,
-  subdir : 'scipy/sparse/linalg/isolve/tests'
+py3.install_sources([
+    '__init__.py',
+    'demo_lgmres.py',
+    'test_gcrotmk.py',
+    'test_iterative.py',
+    'test_lgmres.py',
+    'test_lsmr.py',
+    'test_lsqr.py',
+    'test_minres.py',
+    'test_utils.py'
+  ],
+  pure: false,
+  subdir: 'scipy/sparse/linalg/isolve/tests'
 )
